// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders an empty exercise 1`] = `
<div>
  <section />
</div>
`;

exports[`renders an exercise 1`] = `
<div>
  <section>
    <span
      class="sc-blHHSb sc-fAUdSK fysHgA jHLqBc"
    >
      a
    </span>
    <span
      class="sc-blHHSb fysHgA"
    >
      b
    </span>
  </section>
</div>
`;

exports[`renders an exercise 2`] = `
<div>
  <section>
    <span
      class="sc-blHHSb sc-gtLWhw fysHgA grjdLC"
    >
      a
    </span>
    <span
      class="sc-blHHSb sc-egkSDF fysHgA eCiSln"
    >
      b
    </span>
  </section>
</div>
`;
